--- a/features/layout/page-container/page-container.module.scss
+++ b/features/layout/page-container/page-container.module.scss
@@ -2,6 +2,7 @@
 @use "@styles/font";
 @use "@styles/space";
 @use "@styles/breakpoint";
+@use "@styles/z-index";
 @use "@styles/misc";
 
 .container {
@@ -19,7 +20,7 @@
 }
 
 .contentContainer {
-  min-height: calc(100vh - 2 * space.$s8 - misc.$header-height);
+  min-height: fit-content;
   margin-top: misc.$header-height;
   padding: space.$s8 space.$s3;
   background: white;
@@ -42,4 +43,47 @@
   margin-bottom: space.$s8;
   color: color.$gray-500;
   font: font.$text-md-regular;
+}
+
+.footer {
+  background-color: color.$gray-50;
+  color: color.$gray-500;
+  padding-left: 12px;
+  padding-right: 12px;
+
+  @media (min-width: breakpoint.$desktop) {
+    min-width: 50px;
+  }
+}
+
+.footerContent {
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+}
+
+.logoWrap {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.version {
+  margin: 0;
+  font: font.$text-md-medium;
+}
+
+.linksContainer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 24px;
+}
+
+.link {
+  color: color.$gray-500;
+  text-decoration: none;
+  font: font.$text-md-medium;
 }
