--- a/features/layout/page-container/page-container.module.scss
+++ b/features/layout/page-container/page-container.module.scss
@@ -6,22 +6,18 @@
 @use "@styles/misc";
 
 .container {
-  display: flex;
-  flex-direction: column;
+  height: 100vh;
+  display: grid;
+  grid-template: "navigation" auto "content" 1fr "footer" auto / 1fr;
   background: color.$gray-900;
 
   @media (min-width: breakpoint.$desktop) {
-    // The following code is from the solution (Issue: footer)
-    display: grid;
     grid-template: "navigation content" 1fr "navigation footer" auto / auto 1fr;
   }
 }
 
 .navigation {
-  // The following code is from the solution (Issue: footer)
-  @media (min-width: breakpoint.$desktop) {
-    grid-area: navigation;
-  }
+  grid-area: navigation;
 }
 
 .main {
