--- a/features/projects/components/project-list/project-list.module.scss
+++ b/features/projects/components/project-list/project-list.module.scss
@@ -15,3 +15,12 @@
     grid-template-columns: repeat(auto-fit, 400px);
   }
 }
+
+.loading {
+  display: flex;
+  background-color: red;
+  min-width: 100%;
+  height: 300px;
+  justify-content: center;
+  align-items: center;
+}
