--- a/features/projects/components/project-list/project-list.module.scss
+++ b/features/projects/components/project-list/project-list.module.scss
@@ -18,9 +18,24 @@
 
 .loading {
   display: flex;
-  background-color: red;
   min-width: 100%;
   height: 300px;
   justify-content: center;
   align-items: center;
+
+  img {
+    height: space.$s16;
+    width: space.$s16;
+    animation: rotate 2s linear infinite;
+  }
+
+  @keyframes rotate {
+    from {
+      transform: rotate(0deg);
+    }
+
+    to {
+      transform: rotate(360deg);
+    }
+  }
 }
