--- a/styles/space.scss
+++ b/styles/space.scss
@@ -1,8 +1,11 @@
 $s0: 0;
 $s1: 0.25rem;
 $s2: 0.5rem;
+$s2-1: 0.625rem;
 $s3: 0.75rem;
+$s3-1: 0.875rem;
 $s4: 1rem;
+$s4-1: 1.125rem;
 $s5: 1.25rem;
 $s6: 1.5rem;
 $s8: 2rem;
