Color & state styling: empty and empty-gray buttons

--- a/features/ui/button2/button.module.scss
+++ b/features/ui/button2/button.module.scss
@@ -107,3 +107,33 @@
     color: color.$gray-300;
   }
 }
+
+.empty {
+  border: none;
+  background: none;
+  color: color.$primary-700;
+  box-shadow: none;
+
+  &:hover {
+    background-color: color.$primary-50;
+  }
+
+  &:disabled {
+    color: color.$gray-300;
+  }
+}
+
+.empty-gray {
+  border: none;
+  background: none;
+  color: color.$gray-500;
+  box-shadow: none;
+
+  &:hover {
+    background-color: color.$gray-50;
+  }
+
+  &:disabled {
+    color: color.$gray-300;
+  }
+}
