--- a/styles/space.scss
+++ b/styles/space.scss
@@ -12,9 +12,11 @@ $s5: 1.25rem;
 $s6: 1.5rem;
 $s8: 2rem;
 $s10: 2.5rem;
+$s11: 2.75rem;
 $s12: 3rem;
 $s15: 3.75rem;
 $s16: 4rem;
 $s20: 5rem;
 $s24: 6rem;
 $s28: 10rem;
+$s34: 20rem;
