--- a/features/ui/select/select.module.scss
+++ b/features/ui/select/select.module.scss
@@ -2,9 +2,16 @@
 @use "@styles/font";
 @use "@styles/space";
 
-.container {
+.selectContainer {
   width: fit-content;
   height: fit-content;
+  font: font.$text-md-regular;
+  line-height: 150%;
+
+  & img {
+    width: space.$s5;
+    height: space.$s5;
+  }
 }
 
 .label {
@@ -13,42 +20,88 @@
   line-height: 142.857%;
 }
 
-.content {
+.selectContent {
   width: space.$s34;
   height: space.$s11;
   padding: space.$s2-1 space.$s3-1;
   display: flex;
   align-items: center;
+  margin: space.$s1-1 0;
   gap: space.$s2;
   box-sizing: border-box;
   border-radius: space.$s2;
   border: space.$s0-1 solid color.$gray-300;
   background: white;
   box-shadow: 0 1px 2px 0 rgb(16 24 40 / 5%);
-  font: font.$text-md-medium;
   line-height: 150%;
+
+  &.error {
+    border-color: color.$error-300;
+  }
+
+  &:focus {
+    border-color: color.$primary-300;
+    box-shadow:
+      0 0 0 4px color.$primary-100,
+      0 1px 2px 0 rgb(16 24 40 / 5%);
+  }
 }
 
-.text {
+.selectText {
   flex: 1 0 0;
-}
 
-.dropdownButton {
-  width: space.$s5;
-  height: space.$s5;
+  &.empty {
+    color: color.$gray-500;
+  }
 }
 
 .hint {
   color: color.$gray-500;
   font: font.$text-sm-regular;
-  line-height: 150%;
-}
+  line-height: 142.857%;
 
-.icon {
-  width: space.$s5;
-  height: space.$s5;
+  &.error {
+    color: color.$error-500;
+  }
 }
 
 .select {
   display: none;
+
+  &:disabled + .content {
+    background: color.$gray-50;
+    color: color.$gray-500;
+  }
+}
+
+.optionsContainer {
+  width: space.$s34;
+  display: flex;
+  flex-direction: column;
+  margin-top: space.$s2;
+  border-radius: space.$s2;
+  box-shadow:
+    0 4px 6px -2px rgb(16 24 40 / 5%),
+    0 12px 16px -4px rgb(16 24 40 / 10%);
+}
+
+.optionsContent {
+  width: 100%;
+  padding: space.$s2-1 space.$s3-1;
+  display: flex;
+  align-items: center;
+  gap: space.$s2;
+  box-sizing: border-box;
+
+  &:hover {
+    background-color: color.$primary-25;
+  }
+}
+
+.optionSelected {
+  background-color: color.$primary-25;
+}
+
+.option {
+  flex: 1 0 0;
 }
