--- a/features/ui/select/select.module.scss
+++ b/features/ui/select/select.module.scss
@@ -18,6 +18,7 @@
   font: font.$text-sm-medium;
   color: color.$gray-700;
   line-height: 142.857%;
+  padding-bottom: space.$s1-1;
 }
 
 .selectContent {
@@ -26,7 +27,6 @@
   padding: space.$s2-1 space.$s3-1;
   display: flex;
   align-items: center;
-  margin: space.$s1-1 0;
   gap: space.$s2;
   box-sizing: border-box;
   border-radius: space.$s2;
@@ -59,6 +59,7 @@
   color: color.$gray-500;
   font: font.$text-sm-regular;
   line-height: 142.857%;
+  padding-top: space.$s1-1;
 
   &.error {
     color: color.$error-500;
